# import-rules-enforcer

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: poetry-version-patch.yml
import_rules_enforcer/: __init__.py  __main__.py  _access_level_converter.py  _import_converter.py  _settings.py  _transaction.py
import_rules_enforcer/absolute2relative/: __init__.py  _absolute2relative_converter.py  _test.py
import_rules_enforcer/private2public/: __init__.py  _private2public_converter.py  _test.py
import_rules_enforcer/public2private/: __init__.py  _extract_all.py  _get_imports.py  _public2private_converter.py  _test.py
import_rules_enforcer/public2private/test_parent_parent/test_parent/: __init__.py
import_rules_enforcer/relative2absolute/: __init__.py  _relative2absolute_converter.py  _test.py
tests/integration/: test_integration.py  test_integration_first_set.py  test_integration_second_set.py
